--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <hr>
         <center><h2>Video Demo</h2>
             <video  width="1000px" height="" controls>
-                <source src="YT_gif.mp4" type="video/mp4">
+                <source src="https://drive.google.com/file/d/17yf08iC5c68MW_dlnUMboJr25Sj6Z8FN/view?usp=drive_link" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </center>
